--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,37 +1,150 @@
-extends layouts/default
-
-block head
-  title Servicedesk is Running
-
-block neck
-  link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
-
-block content
-  div.jumbotron
-    h1 Service Desk
-    p.lead
-      | Your Node.js website and user system is running. May the force be with you.
-    div
-      a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
-      | &nbsp;or&nbsp;
-      a.btn.btn-warning.btn-lg(href='/login/forgot/') Reset Your Password
-    div.clearfix
-  div.row
-    div.col-sm-4
-      div.panel.panel-default
-        div.panel-body
-          h3 About Us
-          p About Us About Us About Us About Us About Us About Us About Us About Us About Us About Us About Us
-          a.btn.btn-default.btn-block(href='/about/') Learn More
-    div.col-sm-4
-      div.panel.panel-default
-        div.panel-body
-          h3 Sign Up
-          p Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up Sign up
-          a.btn.btn-default.btn-block(href='/signup/') Learn More
-    div.col-sm-4
-      div.panel.panel-default
-        div.panel-body
-          h3 Contact Us
-          p Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us
-          a.btn.btn-default.btn-block(href='/contact/') Learn More
+doctype html
+html
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    // Page title
+    title test theme
+    // Place favicon.ico and apple-touch-icon.png in the root directory
+    // <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    // Vendor styles
+    link(rel='stylesheet', href='vendor/fontawesome/css/font-awesome.css')
+    link(rel='stylesheet', href='vendor/metisMenu/dist/metisMenu.css')
+    link(rel='stylesheet', href='vendor/animate.css/animate.css')
+    link(rel='stylesheet', href='vendor/bootstrap/dist/css/bootstrap.css')
+    // App styles
+    link(rel='stylesheet', href='fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css')
+    link(rel='stylesheet', href='fonts/pe-icon-7-stroke/css/helper.css')
+    link(rel='stylesheet', href='styles/style.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=', crossorigin='anonymous')
+    script(src='/vendor/jquery/jquery.js')
+    script(src='/views/login/login.js')
+  style(type='text/css').
+    .container,
+    .carousel-inner>.item>img,
+    .carousel-inner>.item>a>img {
+    min-height: 290px;
+    /* Set slide height here */
+    min-width: 290px;
+    }
+  script.
+  body.blank
+    // Simple splash screen
+    .splash
+      .color-line
+      .splash-title(style='height:150px;')
+        h1
+        p
+        .spinner
+          .rect1
+          .rect2
+          .rect3
+          .rect4
+          .rect5
+    //if lt IE 7
+      p.alert.alert-danger
+        | You are using an 
+        strong outdated
+        |  browser. Please 
+        a(href='http://browsehappy.com/') upgrade your browser
+        |  to improve your experience.
+    .color-line
+    .back-link
+    .login-container
+      .row
+        .col-md-2
+          .text-center.m-b-md
+          .hpanel
+        .col-md-5
+          .text-center.m-b-md
+          .hpanel
+            .panel-body
+              img(src='/isu/image/isusystem_logo.jpg', alt='ISU LOGO')
+              #myCarousel.carousel.slide(data-ride='carousel', data-interval='1200')
+                // Indicators
+                ol.carousel-indicators
+                  li.active(data-target='#myCarousel', data-slide-to='0')
+                  li(data-target='#myCarousel', data-slide-to='1')
+                  li(data-target='#myCarousel', data-slide-to='2')
+                // Wrapper for slides
+                .carousel-inner
+                  .item.active
+                    // <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+                    img.tales(src='/isu/image/la.jpg', alt='Los Angeles', style='width:100%;')
+                    .carousel-caption
+                      h3 Los Angeles
+                      p LA is always so much fun!
+                  .item
+                    img(src='/isu/image/chicago.jpg', alt='Chicago', style='width:100%;')
+                    .carousel-caption
+                      h3 Chicago
+                      p Thank you, Chicago!
+                  .item
+                    img(src='/isu/image/ny.jpg', alt='New York', style='width:100%;')
+                    .carousel-caption
+                      h3 New York
+                      p We love the Big Apple!
+                // Left and right controls
+                a.left.carousel-control(href='#myCarousel', data-slide='prev')
+                  span.glyphicon.glyphicon-chevron-left
+                  span.sr-only Previous
+                a.right.carousel-control(href='#myCarousel', data-slide='next')
+                  span.glyphicon.glyphicon-chevron-right
+                  span.sr-only Next
+              .hpanel
+                .panel-body
+                  a(href='http://www.isusystem.com', target='blank') 회사소개
+        .col-md-3
+          .text-center.m-b-md
+          .hpanel
+            .panel-body
+              form#loginForm(action='/index' method='post' name='login')
+                label.control-label(for='login', style='height:35px')
+                  h4
+                    b
+                .form-group
+                  // <label class="control-label" for="companynm">COMPANY</label></label>
+                  select.form-control
+                    option 선택하세요
+                    option 주식회사 이수시스템
+                    option (주)이수
+                    option (주)이수화학
+                    option 이수페타시스
+                    option 주식회사 이수C&E
+                .form-group
+                  input#username.form-control(type='text', placeholder='12001', title='Please enter you username', required='', value= '#{nameCookie}', name='username')
+                  span.help-block.small Your unique ID
+                .form-group
+                  input#password.form-control(type='password', title='Please enter your password', placeholder='******', required='', value='', name='password')
+                  span.help-block.small Your strong password
+                .checkbox(style='padding-left: 20px;')
+                  input.i-checks(type='checkbox', id='idsavecheck' name='idsavecheck' checked=('true'==='#{saveCookie}' ? 'checked' : undefined)) 
+                  |  ID 저장
+                button.btn.btn-success.btn-block Login
+                a.btn.btn-default.btn-block(href='login2.html', target='blank') Register
+        .col-md-2
+          .text-center.m-b-md
+          .hpanel
+      br
+      br
+      br
+      br
+      .row
+        .col-md-12.text-center
+          | Copyright ⓒ 2017 by 
+          strong ISUSYSTEM
+          br
+    // Vendor scripts
+    script(src='vendor/jquery/dist/jquery.min.js')
+    script(src='vendor/jquery-ui/jquery-ui.min.js')
+    script(src='vendor/slimScroll/jquery.slimscroll.min.js')
+    script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
+    script(src='vendor/metisMenu/dist/metisMenu.min.js')
+    script(src='vendor/iCheck/icheck.min.js')
+    script(src='vendor/sparkline/index.js')
+    // App scripts
+    script(src='scripts/homer.js')
