--- a/app/views/question/new.jade
+++ b/app/views/question/new.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
     .masthead.clearfix
         .inner
-            h3.masthead-brand 목록등록
+            h3.masthead-brand 티켓등록
             nav
                 ul.nav.masthead-nav
                     li.active
