--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,7 +1,7 @@
 extends layouts/default
 
 block head
-  title Servicedesk is Running
+  title Servicedesk's Running
 
 block neck
   link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
