--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -20,7 +20,7 @@ html
             span.icon-bar
         div.navbar-collapse.my-navbar-collapse.collapse
           ul.nav.navbar-nav
-            li: a(href='/') Home
+            li: a(href='/main') Home
             li: a(href='/account/') FAQ
             li: a(href='/question/new') 문의하기
             li: a(href='/question/') 처리진행현황
