# KSY - 메인화면 추가, congif.json 추가

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -50,7 +50,7 @@ html
         div.clearfix
 
     div.ajax-spinner
-      img(src='/media/ajax-pulse.gif', alt='Loading')
+      img(src='../public/isu/image/ajax-pulse.gif', alt='Loading')
 
     //if lte IE 9
       script(src='/layouts/ie-sucks.min.js?#{cacheBreaker}')
