--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -12,7 +12,8 @@ html
       div.container
         div.navbar-header
           a.navbar-brand(href='/')
-            img.navbar-logo(src='/media/logo-symbol-64x64.png', alt='Logo')
+            img.navbar-logo(src='/isu/image/logonew.gif', alt='Logo')
+            //img(src='/isu/image/logonew.gif', alt='Logo')
             span.navbar-brand-label #{projectName}
           button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
             span.icon-bar
@@ -26,15 +27,16 @@ html
             li: a(href='/question/') 처리진행현황
             li: a(href='/account/') 자주묻는질문과답
             li: a(href='/register/') 계정등록
+            li: a(href='/manage/company') 회사정보관리
           ul.nav.navbar-nav.navbar-right
             if user && user.username
               li: a(href='#{user.defaultReturnUrl}')
                 i.fa.fa-user
                 |  #{user.username}
             else
-              li: a(href='/register/')
+              li: a(href='/logout')
                 i.fa.fa-user
-                |  Sign In
+                |  로그아웃
 
     div.page
       div.container
