--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -52,7 +52,7 @@ html
         div.clearfix
 
     div.ajax-spinner
-      img(src='/public/isu/image/ajax-pulse.gif', alt='Loading')
+      img(src='/isu/image/ajax-pulse.gif', alt='Loading')
 
     //if lte IE 9
       script(src='/layouts/ie-sucks.min.js?#{cacheBreaker}')
