--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,165 +1,146 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    // Page title
-    title test theme
-    // Place favicon.ico and apple-touch-icon.png in the root directory
-    // <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-    // Vendor styles
-    link(rel='stylesheet', href='vendor/fontawesome/css/font-awesome.css')
-    link(rel='stylesheet', href='vendor/metisMenu/dist/metisMenu.css')
-    link(rel='stylesheet', href='vendor/animate.css/animate.css')
-    link(rel='stylesheet', href='vendor/bootstrap/dist/css/bootstrap.css')
-    // App styles
-    link(rel='stylesheet', href='fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css')
-    link(rel='stylesheet', href='fonts/pe-icon-7-stroke/css/helper.css')
-    link(rel='stylesheet', href='styles/style.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-    script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=', crossorigin='anonymous')
-    script(src='/vendor/jquery/jquery.js')
-    script(src='/views/login/login.js')
-    
-  style(type='text/css').
-    .container,
-    .carousel-inner>.item>img,
-    .carousel-inner>.item>a>img {
-    min-height: 290px;
-    /* Set slide height here */
-    min-width: 290px;
-    }
-  script.
-  body.blank
-    // Simple splash screen
-    .splash
-      .color-line
-      .splash-title(style='height:150px;')
-        h1
-        p
-        .spinner
-          .rect1
-          .rect2
-          .rect3
-          .rect4
-          .rect5
-    //if lt IE 7
-      p.alert.alert-danger
-        | You are using an 
-        strong outdated
-        |  browser. Please 
-        a(href='http://browsehappy.com/') upgrade your browser
-        |  to improve your experience.
-    .color-line
-    .back-link
-    .login-container
-      .row
-        .col-md-2
-          .text-center.m-b-md
-          .hpanel
-        .col-md-5
-          .text-center.m-b-md
-          .hpanel
-            .panel-body
-              img(src='/isu/image/logo.png', alt='ISU LOGO')
-              #myCarousel.carousel.slide(data-ride='carousel', data-interval='4000')
-                // Indicators
-                ol.carousel-indicators
-                  li.active(data-target='#myCarousel', data-slide-to='0')
-                  li(data-target='#myCarousel', data-slide-to='1')
-                  li(data-target='#myCarousel', data-slide-to='2')
-                  li(data-target='#myCarousel', data-slide-to='3')
-                // Wrapper for slides
-                .carousel-inner
-                  .item.active
-                    // <img src="/isu/image/img1.jpg" alt="Los Angeles" style="width:100%;">
-                    img.tales(src='/isu/image/img1.jpg', style='width:100%;')
-                    .carousel-caption
-                      h4 인사시스템
-                      p 클라우드와 모바일 활용  
-                      //h3 Los Angeles
-                      //p LA is always so much fun!
-                  .item
-                    img(src='/isu/image/img2.jpg', style='width:100%;')
-                    .carousel-caption
-                      h4 전자펜(AFP), SmartDocs
-                      p 업무자동화 솔루션
-                      //h3 Chicago
-                      //p Thank you, Chicago!
-                  .item
-                    img(src='/isu/image/img3.jpg', style='width:100%;')
-                    .carousel-caption
-                      h4 BI도구
-                      p Qlik Sense(클릭센스) 
-                      //h3 New York
-                      //p We love the Big Apple!
-                  .item
-                    img(src='/isu/image/img4.jpg', style='width:100%;')
-                    .carousel-caption
-                      h4 하이브리드 클라우드
-                      p 전자증빙시스템
-                      p ISU-EDS 
-                // Left and right controls
-                a.left.carousel-control(href='#myCarousel', data-slide='prev')
-                  span.glyphicon.glyphicon-chevron-left
-                  span.sr-only Previous
-                a.right.carousel-control(href='#myCarousel', data-slide='next')
-                  span.glyphicon.glyphicon-chevron-right
-                  span.sr-only Next
-              .hpanel
-                .panel-body
-                  a(href='http://www.isusystem.com', target='blank') 회사소개
-        .col-md-3
-          .text-center.m-b-md
-          .hpanel
-            .panel-body
-              form#loginForm(action='/index' method='post' name='login')
-                label.control-label(for='login', style='height:35px')
-                  h4
-                    b
-                .form-group
-                  // <label class="control-label" for="companynm">COMPANY</label></label>
-                  //select.form-control
-                  //  option 선택하세요
-                  //  option 주식회사 이수시스템
-                  //  option (주)이수
-                  //  option (주)이수화학
-                  //  option 이수페타시스
-                  //  option 주식회사 이수C&E
-                .form-group
-                  input#username.form-control(type='text', placeholder='EMAIL', title='Please enter you ID', required='', value= '#{nameCookie}', name='username')
-                  //span.help-block.small Your unique ID
-                .form-group
-                  input#password.form-control(type='password', title='Please enter your PASSWORD', placeholder='******', required='', value='', name='password')
-                  //span.help-block.small Your strong password
-                .checkbox(style='padding-left: 20px;')
-                  input.i-checks(type='checkbox', id='idsavecheck' name='idsavecheck' checked=('true'==='#{saveCookie}' ? 'checked' : undefined)) 
-                  |  ID 저장 
-                a.btn.btn-danger.btn-block(style='width:90px, size:small')원격지원
-                button.btn.btn-success.btn-block Login
-                a.btn.btn-default.btn-block(href='register', target='blank') Register
-        .col-md-2
-          .text-center.m-b-md
-          .hpanel
-      br
-      br
-      br
-      br
-      .row
-        .col-md-12.text-center
-          | Copyright ⓒ 2017 by 
-          strong ISUSYSTEM
-          br
-    // Vendor scripts
-    script(src='vendor/jquery/dist/jquery.min.js')
-    script(src='vendor/jquery-ui/jquery-ui.min.js')
-    script(src='vendor/slimScroll/jquery.slimscroll.min.js')
-    script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
-    script(src='vendor/metisMenu/dist/metisMenu.min.js')
-    script(src='vendor/iCheck/icheck.min.js')
-    script(src='vendor/sparkline/index.js')
-    // App scripts
-    script(src='scripts/homer.js')
+    head
+        title #{title}
+        meta(http-equiv='Content-Type' content='text/html,charset=utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        link(hrel='stylesheet', href='/layouts/core.min.css?#{cacheBreaker}')
+        link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css' rel='stylesheet' id='bootstrap-css')
+        script(src='/vendor/jquery/jquery.js')
+        script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js')
+
+        style.
+                html,
+                body {
+                    width: 100%;
+                    height: 100%;
+                    margin: 0;
+                    font-family: 'sans-serif';
+                    color: white;
+                    line-height: 1.3em;
+                }
+                .video-wrapper {
+                    position: fixed;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    overflow: hidden;
+                    z-index:-1;
+                }
+                .video-wrapper video {
+                    position: fixed;
+                    top: 0;
+                    right: 0;
+                    min-width: 100%;
+                    min-height: 100%;
+                    width: auto;
+                    height: auto;
+                }
+                .content {
+                    position: relative;
+                    margin: 60px auto;
+                    width: 80%;
+                    max-width: 640px;
+                    z-index: 1;
+                }
+                .colorgraph {
+                    height: 5px;
+                    border-top: 0;
+                    background: #c4e17f;
+                    border-radius: 5px;
+
+                    background-image: linear-gradient(to right, #008FD4, #008FD4 70%, #A7A9AC 70%, #A7A9AC 80%, #99CA3C 80%, #99CA3C );
+                    //- 크롬,사파리
+                    background-image: -webkit-linear-gradient(left, #008FD4, #008FD4 70%, #A7A9AC 70%, #A7A9AC 80%, #99CA3C 80%, #99CA3C );
+                    //- 파아이폭스
+                    background-image: -moz-linear-gradient(left, #008FD4, #008FD4 70%, #A7A9AC 70%, #A7A9AC 80%, #99CA3C 80%, #99CA3C );
+                    //- 오페라
+                    background-image: -o-linear-gradient(left, #008FD4, #008FD4 70%, #A7A9AC 70%, #A7A9AC 80%, #99CA3C 80%, #99CA3C );
+                }
+      
+        script(type='text/javascript').
+            $(function(){
+                $('.button-checkbox').each(function(){
+                    var $widget = $(this),
+                        $button = $widget.find('button'),
+                        $checkbox = $widget.find('input:checkbox'),
+                        color = $button.data('color'),
+                        settings = {
+                                on: {
+                                    icon: 'glyphicon glyphicon-check'
+                                },
+                                off: {
+                                    icon: 'glyphicon glyphicon-unchecked'
+                                }
+                        };
+
+                    $button.on('click', function () {
+                        $checkbox.prop('checked', !$checkbox.is(':checked'));
+                        $checkbox.triggerHandler('change');
+                        updateDisplay();
+                    });
+
+                    $checkbox.on('change', function () {
+                        updateDisplay();
+                    });
+
+                    function updateDisplay() {
+                        var isChecked = $checkbox.is(':checked');
+                        // Set the button's state
+                        $button.data('state', (isChecked) ? "on" : "off");
+
+                        // Set the button's icon
+                        $button.find('.state-icon')
+                            .removeClass()
+                            .addClass('state-icon ' + settings[$button.data('state')].icon);
+
+                        // Update the button's color
+                        if (isChecked) {
+                            $button
+                                .removeClass('btn-default')
+                                .addClass('btn-' + color + ' active');
+                        }else{
+                            $button
+                                .removeClass('btn-' + color + ' active')
+                                .addClass('btn-default');
+                        }
+                    }
+                    function init() {
+                        updateDisplay();
+                        // Inject the icon if applicable
+                        if ($button.find('.state-icon').length == 0) {
+                            $button.prepend('<i class="state-icon ' + settings[$button.data('state')].icon + '"></i>?');
+                        }
+                    }
+                    init();
+                });
+            });     
+    body
+        //-  #video-wrapper.video-wrapper
+        //-      video#bgvid(autoplay='', loop='')
+        //-          source(src='/m-bg.mp4', type='video/webm')
+        //-          source(src='/m-bg.mp4', type='video/mp4')
+                
+        .content
+                .container                      
+                    .row(style='margin-top:20px')
+                        .col-xs-12.col-sm-8.col-md-6.col-sm-offset-2.col-md-offset-3
+                            form(role='form')
+                                fieldset
+                                    h2 로그인하세요.
+                                    hr.colorgraph
+                                    .form-group
+                                        input#email.form-control.input-lg(type='email', name='email', placeholder='Email Address')
+                                    .form-group
+                                        input#password.form-control.input-lg(type='password', name='password', placeholder='Password')
+                                    span.button-checkbox
+                                        button.btn(type='button', data-color='info') 아이디 저장
+                                        input#remember_me.hidden(type='checkbox', name='remember_me', checked='checked')
+                                        a.btn.btn-link.pull-right(href='') 비밀번호 찾기
+                                    hr.colorgraph
+                                    .row
+                                        .col-xs-6.col-sm-6.col-md-6
+                                            input.btn.btn-lg.btn-success.btn-block(type='submit', value='로그인')
+                                        .col-xs-6.col-sm-6.col-md-6
+                                            a.btn.btn-lg.btn-primary.btn-block(href='') 계정신청
