--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -6,80 +6,32 @@ block head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
-    link(href='vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
-    link(href='vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
-    link(href='layouts/sb-admin-2.css', rel='stylesheet')
-    link(href='vendor/morrisjs/morris.css', rel='stylesheet')
-    link(type='text/css', href='vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet')
-    script(src='public/vendor/jquery/jquery.min.js')
-    script(src='public/vendor/bootstrap/js/bootstrap.min.js')
-    script(src='public/vendor/metisMenu/metisMenu.min.js')
-    script(src='public/vendor/raphael/raphael.min.js')
-    script(src='public/vendor/morrisjs/morris.min.js')
-    script(src='data/morris-data.js')
-    script(src='public/layouts/sb-admin-2.js')
-
+    link(rel='stylesheet', href='vendor/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='vendor/metisMenu/metisMenu.min.css')
+    link(rel='stylesheet', href='layouts/sb-admin-2.css')
+    link(rel='stylesheet', href='vendor/morrisjs/morris.css')
+    link(rel='stylesheet', href='vendor/font-awesome/css/font-awesome.min.css', type='text/css')
 block content
     #wrapper
-        
- 
-        
-        .navbar-default.sidebar(role='navigation')
-            .sidebar-nav.navbar-collapse
-                ul#side-menu.nav
-                    li
-                        a(href='#')
-                            i.fa.fa-sitemap.fa-fw
-                            span.fa.arrow
-                        ul.nav.nav-second-level
-                            li
-                                a(href='#') Second Level Item
-                            li
-                                a(href='#') Second Level Item
-                            li
-                                a(href='#')
-                                    span.fa.arrow
-                                ul.nav.nav-third-level
-                                    li
-                                        a(href='#') Third Level Item
-                                    li
-                                        a(href='#') Third Level Item
-                                    li
-                                        a(href='#') Third Level Item
-                                    li
-                                        a(href='#') Third Level Item
-               
+    // Navigation
+    nav.navbar-default.navbar-static-top.sidebar(role='navigation', style='margin-top: 0')
 
-
-
-
-
-        nav.navbar-default.sidebar(role='navigation', style='margin-top: 0')
-            .sidebar-nav.navbar-collapse
-                ul#side-menu.nav
-                    li.sidebar-search
-                        .input-group.custom-search-form
-                            input.form-control(type='text', placeholder='Search...')
-                            span.input-group-btn
-                                button.btn.btn-default(type='button')
-                                    i.fa.fa-search
-                    li
-                        a(href='#')
-                            i.fa.fa-dashboard.fa-fw
-                            |  HOME
-                    li
-                        a(href='#')
-                            i.fa.fa-sitemap.fa-fw
-                            |  Multi-Level Dropdown
-                            span.fa.arrow
-                        ul.nav.nav-second-level
-                            li
-                                a(href='#') Second Level Item
-                            li
-                                a(href='#') Second Level Item
-
-
+        .sidebar-nav.navbar-collapse
+            ul#side-menu.nav
+                li.sidebar-search
+                .input-group.custom-search-form
+                    input.form-control(type='text', placeholder='Search...')
+                    span.input-group-btn
+                        button.btn.btn-default(type='button')
+                            i.fa.fa-search
+                li
+                a(href='/main')
+                    i.fa.fa-dashboard.fa-fw
+                    |  HOME
+            // /.sidebar-collapse
+        // /.navbar-static-side
     #page-wrapper
+        // /.row
         .row
             .col-lg-3.col-md-6(style='margin-top:20px;')
                 .panel.panel-default
