--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -6,18 +6,20 @@ block head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
-    link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css', rel='stylesheet')
     link(href='/vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
     link(href='/layouts/sb-admin-2.css', rel='stylesheet')
     link(href='/vendor/morrisjs/morris.css', rel='stylesheet')
     link(type='text/css', href='/vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet')
     script(src='/vendor/jquery/jquery.min.js')
-    script(src='/vendor/bootstrap/js/bootstrap.min.js')
+    script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
     script(src='/vendor/metisMenu/metisMenu.min.js')
     script(src='/vendor/raphael/raphael.min.js')
     script(src='/vendor/morrisjs/morris.min.js')
-    script(src='/data/morris-data.js')
     script(src='/layouts/sb-admin-2.js')
+
+    //추후 삭제
+    script(src='/data/morris-data.js')
 
 block content
     #wrapper
