--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -7,6 +7,7 @@ block head
     meta(name='description', content='')
     meta(name='author', content='')
     link(href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css', rel='stylesheet')
     link(href='/vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
     link(href='/layouts/sb-admin-2.css', rel='stylesheet')
     link(href='/vendor/morrisjs/morris.css', rel='stylesheet')
